[package]
name = "cfautors"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", default-features = false, features = [
    "std",
    "derive",
    "help",
    "color",
    "usage",
    "error-context",
] }
humantime = "2.3.0"
reqwest = { version = "0.13.2", default-features = false, features = [
    "blocking",
    "default-tls",
    "json",
] }
serde = { version = "1.0.228", default-features = false }
serde_derive = { version = "1.0.228", default-features = false }

[profile.release]
lto = true
codegen-units = 1
